# kurs4

./: .gitignore  README.md  main.py  pyproject.toml
src/: Json_worker.py  Parser.py  api.py  file_worker.py  user_inteactive.py  vacancy.py
tests/: test_user_interactive.py  test_vacancy.py
